--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,15 +1,20 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Search <%=shopName%></title>
-    <link rel="stylesheet"  type="text/css" href="main.css" />
-  </head>
-  <body>
-    <h1>Search <%=shopName%></h1>
-    <form action="/search-result" method="GET">
-      <p>What book do you want?</p>
-      <input id="search-box" type="text" name="keyword" value="Default">
-      <input type="submit" value="Search" >
-    </form>
-  </body>
+
+<head>
+  <title>Search <%=shopName%>
+  </title>
+  <link rel="stylesheet" type="text/css" href="main.css" />
+</head>
+
+<body>
+  <h1>Search <%=shopName%>
+  </h1>
+  <form action="/search-result" method="GET">
+    <p>What book do you want?</p>
+    <input id="search-box" type="text" name="keyword" placeholder="Default">
+    <input type="submit" value="Search">
+  </form>
+</body>
+
 </html>
