--- a/views/searchresult.ejs
+++ b/views/searchresult.ejs
@@ -20,8 +20,7 @@
                     <%=result[i].name%>
                         <br>
                         <b> Price: </b>
-
-                        <%=result[i].price%>
+                        £ <%=result[i].price%>
                 </a>
             </li>
             <%}%>
