--- a/views/searchresult.ejs
+++ b/views/searchresult.ejs
@@ -1,3 +1,4 @@
+<!-- template page for search results  -->
 <!doctype html>
 <html>
 
@@ -23,6 +24,7 @@
                         £ <%=result[i].price%>
                 </a>
             </li>
+            <br>
             <%}%>
     </ul>
 </body>
